# prediction-market-surveillance

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: marts-autorecover.yml  marts-freshness.yml
.streamlit/: config.toml  secrets.toml.example
airflow/dags/: surveillance_dag.py
contracts/: market_event.schema.json
dashboard/: app.py  cloud_app.py  requirements.txt  s3_app.py
dbt/market_surveillance/: dbt_project.yml  profiles.example.yml
dbt/market_surveillance/models/: _models.yml
dbt/market_surveillance/models/marts/: fct_calibration.sql  fct_coherence.sql  fct_dead_letter_reasons.sql  fct_flagged_recent.sql  fct_ingest_summary.sql  fct_price_minutely.sql  fct_volume_anomalies.sql
dbt/market_surveillance/models/reconciliation/: rec_stream_vs_batch.sql
dbt/market_surveillance/models/staging/: _sources.yml  stg_market_events.sql
deploy/: Dockerfile  Dockerfile.spark  PUBLIC_DASHBOARD.md  README.md  bootstrap.sh  check_marts_fresh.sh  dbt-batch.service  dbt-batch.timer  dbt-profiles.yml  docker-compose.vm.yml  lake-prune.service  lake-prune.timer  marts-freshness.service  marts-freshness.timer  profiles.yml  publish_to_s3.sh  setup_autoreboot_alarm.sh  surveillance.service
ingestion/: fetch_resolutions.py  normalize.py  polymarket_ws.py  publish_marts.py  seed_lake.py  seed_resolutions.py  synthetic.py
streaming/: detectors.py  spark_job.py  validate.py
tests/: test_detectors.py  test_normalize.py  test_validate.py
