[project]
name = "prediction-market-surveillance"
version = "0.1.0"
description = "Real-time prediction-market surveillance with a data-contract and reconciliation layer"
requires-python = ">=3.10"
dependencies = [
    "kafka-python>=2.0.2",
    "websockets>=12.0",
    "requests>=2.31",
    "pyspark==3.5.1",
    "duckdb>=1.0.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
snowflake = ["dbt-snowflake>=1.8"]
airflow = ["apache-airflow>=2.9"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = ["ingestion", "streaming", "warehouse"]
